@@ -5,18 +5,30 @@ DIST python-swiftclient-1.3.0.tar.gz 52707 SHA256 9aac48035d497473bf198f80aab711
 DIST python-swiftclient-1.5.0.tar.gz 61714 SHA256 7307b5797e9c8f61e7cbc98e5248b649c110a17f365613a6e4f94ae1ad2486b8 SHA512 a9343aa4bc6acf238cf09f17b178185db4158ac4f89ef5c1f8a5f473d2640a29d044a060c8b2ed29ded9be683932cfb6f7e51482d1f6eed2ef9cc34e338b3a1f WHIRLPOOL b2a01cc9d44140dedd32c32e4bb955863801883fb7ce25b96fb54bf218637cb165550406e36c85a32514d5c453d0612d71dbcfa9b5b05266ff01d82fd7389fa2
 DIST python-swiftclient-1.6.0.tar.gz 71606 SHA256 4b4150f078549b40893e83ddc8d79166da9532cd565acf671bad4d5152b0360f SHA512 cca01715c52a8bfb3d7a1e975f5ec3dfd9a732b49a66b3325fa6465f5f55770cae678af0979af5993c1cc2d4b4dc89f595e7199899e725a81f446b417a78b9bf WHIRLPOOL b150305976a5b8abb7e03446190fd959ddd6f9b295416e6f1c2bc367d15a8a11b22cc254a6c6731fc60a9b40027050525430e21ab6807f04bbc1a5e0adbf53f0
 DIST python-swiftclient-1.8.0.tar.gz 72672 SHA256 c6054784d818552c0fe6b6b985323c7a811a42cc49a52f3d44330987cbbce39b SHA512 f59ff78ac72d77f0d52bcd5ce17f05a7c689995b2e99c6b88b541ca5fe873fdb382daa6c361eade406d233745372294978330216185bc17e2d3c3a4e763a6714 WHIRLPOOL 3a1ae95dd01c68be8a500d7e10a582c8b97cd9d9c511d33cd60fa8c13cfbf560b4ba2a0d4a5467586cd00ba1471f41709279f05a775cda78f4551bc0a146097c
+DIST python-swiftclient-1.9.0.tar.gz 55644 SHA256 80883306c8609580555b91eab28c068b7cdf534d01b8dc2190d736cd72ece163 SHA512 71e1c6bb0e53df0164271d0123db61935adccddceb0b152a932f1ad57474c4499ee7634b49df0845c5bef6fe445211c07f8e2104c75bccb0bfa0c54309f19e96 WHIRLPOOL d2ce5485a9059b3d1c647145959118e2dca68923b848327aaf5c509a386a7123130b1add00d45be1cc6496039acc2ee9ff83ad0c5bf491668ed81c5acbfd4233
 DIST python-swiftclient-2.0.2.tar.gz 54682 SHA256 bad3902187b0eeb0a7371d54d5789a8e0c745ca2acca5ca4d86961952e37888a SHA512 b22eea041e2764da0f27ac1a942512c61784c6686a99f99ce761c6f6d015719ef086a98dc30b03b26e1c7aed5a285681f947380ee841a723c946e271c9dee517 WHIRLPOOL 8f7362b6322245d1fff898f0977b59df34d97bce9a25543bf6d2fab99338d70b5c404f4c52248c20629ac77fc75eb92b0aaad6cb0f3afea2a7ab832f2edbfe22
 EBUILD python-swiftclient-1.3.0.ebuild 1244 SHA256 337bca981f0f91bece7fbfad4f430a862641222aeb72c0c8bf9d9c7cbc3fbd86 SHA512 8636bf701aa5e0e4112ec437fa71ee15ef6b69f3ce69e342c2e7bbe7d87efc01cdfa8ce326849283b471389c58659e9321ca983cbf81f7c0a84c0f6e85cc6967 WHIRLPOOL b076ffb1419bb82c1d588b747d747d003b9e0391cc1fd1e11ec436245e850f88929bf4ecd1f9e993c9aae762c20d7e31467cd9b210afcab437a6bc8c184d50e3
 EBUILD python-swiftclient-1.5.0.ebuild 1321 SHA256 312624e48804aa5d3e851f4f1137b655232fa99fb09a9dff5ea4fa8e39330756 SHA512 a919a745caaa57a3b2e6afc97edb0a1929328df4f8ba5e4851b2c27dfe934aae0d620ab53231111bc3b069331e6d1274d56b0cd10da12b996eaf31a8ce4bbeb5 WHIRLPOOL 7d9b77c1d9fe47ecd825e42ba02e38d86428396c2f9e1477db51e09a56bf98d5fe94d28cd18a67520582e0b67ae25ed14a13c42f39669690bf7c473412dba7ca
 EBUILD python-swiftclient-1.6.0.ebuild 1763 SHA256 da9b47ceb583055706730900f431190f0438e62277720c76c63b64c2112e37c4 SHA512 121c1d526b0a53c0604f0b6a7c0a43433dab3d693e4abb4b7506540833eb9e29ececd48027498378fca2a848d27c5f3c316d54cd07092176b5c82e56d8f8a8ab WHIRLPOOL ff59dbacf9676e08296ab80532b4fdb7af4bea5247c2d0879649d37217601935f132ed939fdb3bf97e93a60fd8355ed5033c07b8ec9111f685acbc956b9e5898
 EBUILD python-swiftclient-1.8.0.ebuild 1910 SHA256 8dea501149658a5b077777fb0b7582e668f9c2f1d24a49f41b2ead2de9d506f7 SHA512 4206c56741504e3ed2b09a27f0d0c29e011340bff15055484effa737a47c45bc11789ab9cfb0c56e69efcee0ee057c0985ae562c1ebfc4a32abf1d31ef069103 WHIRLPOOL 8d23221b4e2069b4446179490f3b258a3d175b3cf45efd3549a13277bd885810dcbf866b02af8df27ed34eb821a9a924c8be79a741b7bcad485bbc1d81e36683
+EBUILD python-swiftclient-1.9.0.ebuild 1837 SHA256 80154f00d5a8fb337c04dd724de96500cf190655a9a389224cd05b21934bc02e SHA512 185f827f4115addad1f7d04119001c31d7519c3a247cc4a2682c2af7e571657232a829912b9556701d1cb172cfc3672a50d11a8a3dab35bd109232f9d76a2463 WHIRLPOOL b60f940b93ef023ce06692c1d120d8c6d423cf5976c387ebd28649f394badc9baf5e467a3f6325015c1ea9ae127a9dac8635bdaa030830b31bb18fe4de54282c
 EBUILD python-swiftclient-2.0.2.ebuild 1857 SHA256 ec918f7cd33dd6973a42db65d76253936a248e540b2217bfc5bffd0509213a99 SHA512 dadb7e4e7ff25122479680f68116a3ee1e473068cd2434a6aa3587f8cdc7539bf75d3a305ebb6dce13df529390d7918b80d55618dbf11fbc2f76c320c88277e8 WHIRLPOOL 3f74ff0395bbacc5fbf12af6e2f7bb724605b24f512f50270e18b93eabcb271be02be4c9da610ee299afb8847308c3c8a6d4cbe2b4b59680f0324025afa532f3
-MISC ChangeLog 2263 SHA256 4650a8c5bda5aba6e2237c5dcc9c1028ba5e0e0b7f428bb53120b3a3226282bd SHA512 ee6bfec705589400723e8cfc51ab756410d50186b73fb61d4293103508ad143e7c1496518841cd9a81730c7b8aef46cf889cf82cc389972622839c722da21508 WHIRLPOOL d3371faca0c5725b4979a0e89d38007f051a48408edec7823cb9a6d860bd18492e9ce371348fce9747093e50e16719e4dd9a3ec4b75707d20eebb73b9420d6d8
+MISC ChangeLog 2410 SHA256 ab64cd1d72bcafc2b771a43759e571d7fc62deb873a9de57426e3201457797d9 SHA512 99761ec3d32fcf0c15073e0ea99b1e476764f6c37f9fa38be3fd3b9d4d69b365a8291a4a62c005b77d417667757d1555d981a820b2bc4a65b0d4c66c1101be4c WHIRLPOOL ec13c17d1b3ee403648b94a1a82f8d183126faad21b011f357d6e37ea458093d891128b2311efed5c6cea11c51430f6e9f409cb8b9132ae8f0332f464aed1d0a
 MISC metadata.xml 348 SHA256 4d6c0e1aacad5621435008bad2d49cfe4065eac1769af4012b317ec3fbb600f3 SHA512 9c034100076019685f841893ce1ed8f24f58f8f77dfca6570bd3bf2ba05d8303a4a1b5cacb337e6aeae63dc506ec6940ecf6e141e10de8abb0332269822b8391 WHIRLPOOL 97ebfa4051c12dfc2fa8343478152150868037daa1a9736ac4d6e89cc5721e395548922d968175b4f6cf20d228e93efa3f2503a127dc66c80e87f6ac1497ee1f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMqJBIACgkQ1ycZbhPLE2D7RQCeMGRhPUnaWXZUHDY3b5kg9CzF
-CzMAoLQGCmd2pjMw+4vm44Uyyjfv/yn4
-=dkqM
+iQIcBAEBCAAGBQJTN6Z8AAoJECRx6z5ArFrDebAQAJxqJ7J54Nr7shWX/7ISS/zL
+T4jauVR/hbFsjvFGWfCIVMb1qjNQBsOHk5t0rnmN04d3BhBgFVM0o8hjbVNijair
+zS/4Tiol2+ddg5gAjK4jwsfU1YdAaZSssddCPvxUdNHp9TPM1Cmm19pmOWhWaqgo
+E40l0oVplbhY5s1Z8ypKjt9T93xaH7Mf16queT0RjllgoIPad/tkoAdWAVgpzt3G
+r13B2U89+rBSxmiQ5cRiqFD/7g1DswNy1huBWHQQ7TqKisLRS9OnpLUJh93jvPO4
+9sd4kBxXRJkocpf3jpKcBCxb5N2zGHdA9E3v6FrFaisg/DPf/JuCCnm3Gw4XAA4q
+IrmM/r3FIMYdz61KIetwgECIm3IFS1ydoLa1TGTLXqPKloGxjqK9b8NHMz9kl6f6
+egfE6sCq4zw8N2AuY37StCpTSuuLcS53Ijbwq3UgRmwJD1EFNVEtJUil4/WkWX/o
+hjfwZCcAyR3cituhN32mwGBBM45KkCVs9ly2wKhE82uoUMbbaYB+9EtQZe9N3jT/
+bVsuhnhEbI8EqQdwyxpV8CiUObw7TI6D3bmXDquW5K7SiLH04QZQJAR/PvhAm0Lh
+prvna68pL3bIb8mFz5cIKb43HevuIf3U0PT8gKRvDz+bfoSrdltMb5EFEVoVTJgl
+i4+kPiR56M0Ozc1p0fEX
+=PEVk
 -----END PGP SIGNATURE-----
