@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pbr-0.5[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( ~dev-python/pep8-1.4.5[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/coverage-3.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/mock-1.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/python-keystoneclient-0.4.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/sphinx-1.1.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/sphinx-1.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testrepository-0.0.17[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testtools-0.9.32[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/hacking-0.8.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/hacking-0.9[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] doc? ( >=dev-python/sphinx-1.1.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ) userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+DESCRIPTION=Python bindings to the OpenStack Object Storage API
+EAPI=5
+HOMEPAGE=https://launchpad.net/python-swiftclient
+IUSE=doc test python_targets_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=Apache-2.0
+RDEPEND=>=dev-python/simplejson-2.0.9[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/d2to1-0.2.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/d2to1-0.3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=mirror://pypi/p/python-swiftclient/python-swiftclient-1.9.0.tar.gz
+_eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	3bb814ab7959a36067101a6bef683b6f	python-utils-r1	18d8279a3382bf4453e7ff35208ce907	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=c13d236d9feab493ce4f55e125db6713
