@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-swiftclient
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-swiftclient/ChangeLog,v 1.11 2014/03/19 23:11:13 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-swiftclient/ChangeLog,v 1.12 2014/03/30 05:06:16 prometheanfire Exp $
+
+*python-swiftclient-1.9.0 (30 Mar 2014)
+
+  30 Mar 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +python-swiftclient-1.9.0.ebuild:
+  bup
 
   19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
   python-swiftclient-2.0.2.ebuild:
